--- a/injection/src/main/resources/application.properties
+++ b/injection/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+management.endpoints.web.exposure.include=*
+
+info.app.name=Dependency Injection With RestApi
+info.app.description=Injection Day2 Task
+info.app.version=1.0.0
+
+
